# CosmicMixer

./: PKGBUILD  README.md  install.sh  pyproject.toml
CosmicMixer/: mixer.py
CosmicMixer/themes/: base.scss
CosmicMixer/themes/palettes/: cosmic.scss  nord.scss
docs/: customization.md
